WVFIS-351: spacing before content fix

--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -692,7 +692,7 @@ input#pan {
   color: #767e86;
   font-size: 14px;
   font-weight: 400;
-  margin: -10px 0 20px 0px;
+  margin: -10px 0 30px 0px;
   line-height: 1.6;
 }
 
@@ -700,7 +700,7 @@ input#pan {
   color: #102f50;
   font-size: 16px;
   font-weight: 500;
-  margin: -10px 0 20px 0;
+  margin: -10px 0 30px 0;
   line-height: 1.6;
 }
 
